{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "70c1368a-fa70-4191-b844-4af5f7b0630f",
            "actions": [
                {
                    "name": "Thrust",
                    "type": "PassThrough",
                    "id": "51988dff-945e-429f-9bf9-adddc9a6704b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Brake",
                    "type": "PassThrough",
                    "id": "97ce58e8-cd9f-4610-a3ce-85ca92dcdeed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Roll",
                    "type": "PassThrough",
                    "id": "65488c8c-c4fb-468f-b8f2-de9a2b0f7f3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pitch",
                    "type": "PassThrough",
                    "id": "ba13357b-a67f-43f3-95df-36a033a857e6",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Yaw",
                    "type": "PassThrough",
                    "id": "0c133b84-0416-49eb-8456-99ca5a462dc2",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PitchYawMouse",
                    "type": "PassThrough",
                    "id": "f33d2afb-58ec-4e52-9900-61350b84a056",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Keyboard 1D Axis",
                    "id": "a498afa6-2128-45d3-99ae-ba540c8df048",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e06cab12-0300-4c53-9f27-382a854b3dd4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "403c4ea4-48d9-4c08-9b6e-d65050cdacbc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamePad 1D Axis",
                    "id": "9564b813-8903-4a14-9f5b-f5be0d56cb01",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a5df5d7b-4a77-4ff0-8785-69b6bf446a00",
                    "path": "<Gamepad>/rightStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "606fd037-cc92-497b-9c72-89b836b3a9c9",
                    "path": "<Gamepad>/rightStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e158eb8a-cdec-4de8-b6dd-487fa0bbd968",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "114890f7-209b-4338-be9d-73de8af917b7",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ce942e7f-a7b4-430e-859f-79303a6d90bd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7eba23c7-dd7c-4d76-a276-a67e8e404db6",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Brake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "GamePad 1D Axis",
                    "id": "f835f366-efc8-4fb7-9fd7-c7740fa47e04",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d575da20-5a74-4da8-bc1f-70a2163c7479",
                    "path": "<Gamepad>/rightStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8dce3742-7f33-44e3-ae3d-f2602a8ae2c3",
                    "path": "<Gamepad>/rightStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pitch",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "GamePad 1D Axis",
                    "id": "2c9b807d-3d23-46f6-aab7-92d40c58d6f7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d91615bb-e91a-4886-94d2-344155b439f2",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0888e7a3-3324-4716-b55e-ce03beaa1d44",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Yaw",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5e824f54-f1a4-4f18-8e47-dc929311568e",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PitchYawMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Systems",
            "id": "82f681b6-f879-4733-a4cc-d3f73de4100e",
            "actions": [
                {
                    "name": "EngageNav",
                    "type": "Button",
                    "id": "43688f86-897c-4c86-83fb-e07452c8f998",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "54ab7687-b1ee-4902-94e6-f5616f9fda18",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EngageNav",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "933f9098-535d-49c0-b24d-35baccf6b263",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EngageNav",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}